# src/openapi.json
@@ -973,7 +973,7 @@
         "x-codegen-request-body-name": "body"
       }
     },
-    "/articles/comments/${id}/reply": {
+    "/articles/comments/{id}/reply": {
       "post": {
         "tags": ["comments"],
         "description": "Reply to a comment for the article",
@@ -991,7 +991,7 @@
         "requestBody": {
           "description": "Add the comment",
           "content": {
-            "*/*": {
+            "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/comment"
               }
@@ -1019,6 +1019,255 @@
           }
         ],
         "x-codegen-request-body-name": "body"
+      }
+    },
+    "/projects": {
+      "get": {
+        "tags": ["projects"],
+        "description": "Returns a list of all projects",
+        "parameters": [
+          {
+            "name": "skip",
+            "in": "query",
+            "description": "Page number",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "count",
+            "in": "query",
+            "description": "Number of items per page",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "published",
+            "in": "query",
+            "description": "published filter",
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of blog posts",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/databaseProject"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["projects"],
+        "description": "Add the new project",
+        "requestBody": {
+          "description": "Blog post to create",
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/userProject"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/databaseProject"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "User need to login",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/unauntheticatedError"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "User not authorized to add article",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/unauntheticatedError"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerToken": []
+          }
+        ],
+        "x-codegen-request-body-name": "body"
+      }
+    },
+    "/projects/{id}": {
+      "get": {
+        "tags": ["projects"],
+        "description": "Get a single project",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "specifies the id of message to get",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return a blogeof given id",
+            "content": {
+              "application/json": {}
+            }
+          },
+          "404": {
+            "description": "Project notFound",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["projects"],
+        "description": "Delete a blog of given id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "specifies the id of message to get",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of messages",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/databaseProject"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "User need to login",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/unauntheticatedError"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Project notFound",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/notFoundError"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerToken": []
+          }
+        ]
+      },
+      "patch": {
+        "tags": ["projects"],
+        "description": "Update a single project of given id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "specifies the id of project to get",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Properties to update",
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/updateProject"
+              }
+            }
+          },
+          "required": false
+        },
+        "responses": {
+          "200": {
+            "description": "Return the updated project",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/databaseArticle"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "User need to login",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/unauntheticatedError"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Message notFound",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/notFoundError"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerToken": []
+          }
+        ],
+        "x-codegen-request-body-name": "message"
       }
     },
     "/user/profile": {
@@ -1207,6 +1456,55 @@
         },
         "x-codegen-request-body-name": "body"
       }
+    },
+    "/owner": {
+      "get": {
+        "tags": ["projects"],
+        "description": "Returns a list of all projects",
+        "parameters": [
+          {
+            "name": "skip",
+            "in": "query",
+            "description": "Page number",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "count",
+            "in": "query",
+            "description": "Number of items per page",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "published",
+            "in": "query",
+            "description": "published filter",
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of blog posts",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/databaseProject"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1383,8 +1681,15 @@
               "info": {
                 "type": "string"
               },
+              "about": {
+                "type": "string"
+              },
               "name": {
                 "type": "string"
+              },
+              "profilePic": {
+                "type": "string",
+                "format": "binary"
               }
             },
             "example": {
@@ -1451,6 +1756,95 @@
         "allOf": [
           {
             "$ref": "#/components/schemas/updateArticle"
+          },
+          {
+            "type": "object",
+            "properties": {
+              "published": {
+                "type": "boolean",
+                "default": false
+              },
+              "featured": {
+                "type": "boolean",
+                "default": false
+              },
+              "createdAt": {
+                "type": "string",
+                "format": "date-time"
+              },
+              "updatedAt": {
+                "type": "string",
+                "format": "date-time"
+              }
+            },
+            "example": {
+              "id": "64fa44242fa44242",
+              "createdAt": "",
+              "updatedAt": "",
+              "reply": []
+            }
+          }
+        ]
+      },
+      "userProject": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "categories": {
+            "type": "string"
+          },
+          "link": {
+            "type": "string"
+          },
+          "githubLink": {
+            "type": "string"
+          },
+          "summary": {
+            "type": "string"
+          },
+          "image": {
+            "type": "string",
+            "format": "binary"
+          }
+        },
+        "example": {
+          "title": "How to make api",
+          "summary": "Every thing you need to make sure that your api is working",
+          "link": "https://example.com",
+          "githubLink": "https://github.com/munezerobagira/munezerobagira",
+          "categories": "javascript, blog"
+        }
+      },
+      "updateProject": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/userProject"
+          },
+          {
+            "type": "object",
+            "properties": {
+              "published": {
+                "type": "boolean",
+                "default": false
+              },
+              "featured": {
+                "type": "boolean",
+                "default": false
+              }
+            },
+            "example": {
+              "published": true,
+              "featured": true
+            }
+          }
+        ]
+      },
+      "databaseProject": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/updateProject"
           },
           {
             "type": "object",
