# src/validations/project.js
@@ -4,12 +4,14 @@ const createProject = Joi.object({
   title: Joi.string().required(),
   summary: Joi.string().required(),
   link: Joi.string().required(),
+  githubLink: Joi.string(),
   categories: Joi.string().default("blog"),
 });
 const updateProject = Joi.object({
   title: Joi.string(),
   summary: Joi.string(),
   link: Joi.string(),
+  githubLink: Joi.string(),
   categories: Joi.string(),
   published: Joi.boolean(),
   featured: Joi.boolean(),
@@ -27,3 +29,4 @@ export default {
   createProject,
   updateProject,
 };
+
